# WTree

./: .gitignore  CMakeLists.txt  LICENSE  README.md  requirements.txt
cmake/: WTreeContainerConfig.cmake.in
examples/: CMakeLists.txt  complex_map_example.cpp  comprehensive_map_tests.cpp  encapsulated_map_example.cpp  map_example.cpp  single_operations.cpp  string_map.cpp  wtree_print_example.cpp
include/wtree/: map.hpp  set.hpp
include/wtree/detail/: containers.hpp  index.hpp  iterator.hpp  iterator.tpp  locator.hpp  locator.tpp  multi_container.hpp  node.hpp  node.tpp  node_manager.hpp  node_manager.tpp  traits.hpp  tree.hpp  tree.tpp  type_aliases.hpp  unique_container.hpp
include/wtree/optional/: print.hpp  profile.hpp  utils.hpp
src/Test/: makefile
src/Test/Remove_Test/: Remove_Test.cpp  makefile  test_massive.csv
src/Test/Rules_Test/: RulesTestNamespace.cpp  RulesTestNamespace.hpp  Rules_Test.cpp  makefile
src/Test/Search_Test/: Search_Test.cpp  makefile
src/example/: makefile  single_operations.cpp
src/test/: makefile
src/test/Rules_Test/: RulesTestNamespace.hpp  Rules_Test.cpp  makefile
src/utils/: ExpTimer.h  IterationUtils.py  KeyGenerators.h
src/wtree/: WTree.cpp  WTree.h  WTree_base_insert.cpp  WTree_defs.hpp  WTree_insert.cpp  WTree_insert_basic.cpp  WTree_insert_both.cpp  WTree_insert_bs_both.cpp  WTree_insert_bs_slide.cpp  WTree_insert_slide.cpp  WTree_insert_split.cpp  WTree_node.cpp  WTree_print.cpp  WTree_remove.cpp  WTree_search.cpp  WTree_search_bs.cpp  WTree_utils.cpp
test/: CMakeLists.txt  Readme.md  shared.hpp
test/erase_rules/: erase_rules_namespace.hpp  erase_rules_test.cpp
test/insert_rules/: insert_rules_namespace.hpp  insert_rules_test.cpp
test/locator/: locator_test.cpp
utils/: experiment_timer.hpp  key_generators.hpp
